cmake_minimum_required(VERSION 2.8)

enable_language(C)
enable_language(CXX)
enable_language(Fortran)

set(CMAKE_BUILD_TYPE Release)

FILE(GLOB MDSTRESS_SOURCES_H   include/*.h)
FILE(GLOB MDSTRESS_SOURCES_CPP src/*.cpp)
SET(MDSTRESS_SOURCES ${MDSTRESS_SOURCES_CPP} ${MDSTRESS_SOURCES_H})

INCLUDE_DIRECTORIES(include/)

FIND_LIBRARY(LAPACK_LIBRARY NAMES lapack liblapack HINTS /usr/lib REQUIRED)

FIND_LIBRARY(LAPACK_LIBRARY NAMES lapack liblapack HINTS /usr/lib REQUIRED)

ADD_LIBRARY(mdstress SHARED ${MDSTRESS_SOURCES})

TARGET_LINK_LIBRARIES(mdstress ${LAPACK_LIBRARY} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})

INSTALL(TARGETS mdstress RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib/static)

INSTALL (FILES ${MDSTRESS_SOURCES_H} DESTINATION include/mdstress)

ADD_SUBDIRECTORY(boostpython)
ADD_SUBDIRECTORY(tensortools)